# nono

./: .gitignore  AGENTS.md.bundle  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bundle  Cargo.toml  Cross.toml  MANUAL_TEST_STEPS.md  Makefile  README.md  _reconcile_pr555.patch  clippy.toml  nono_state.md
.github/workflows/: ci.yml  image-build.yml  release.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-INTEGRATION-REPORT.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: nono-shell-status-dll-init-failed.md  windows-supervised-exec-cascade.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/templates/: upstream-sync-quick.md
bindings/c/: Cargo.toml
crates/nono/: Cargo.toml  README.md
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-proxy/: Cargo.toml
crates/nono/src/: capability.rs  diagnostic.rs  error.rs  keystore.rs  lib.rs  query.rs
crates/nono/src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
crates/nono/src/supervisor/: aipc_sdk.rs  mod.rs  policy.rs  socket.rs  socket_windows.rs  types.rs
crates/nono/src/trust/: bundle.rs  mod.rs  signing.rs
crates/nono/src/undo/: object_store.rs  snapshot.rs  types.rs
docs/: docs.json  session-retention.md
qa-profiles/: 01-credential-with-rules.json  02-rules-without-credential.json  03-mixed-routes.json
scripts/: build-windows-msi.ps1  check-upstream-drift.ps1  check-upstream-drift.sh  sign-windows-artifacts.ps1  test-windows-shell-tui.ps1  test-windows-shell-write-deny.ps1  validate-windows-msi-contract.ps1  windows-test-harness.ps1
tests/: run_integration_tests.sh
(+512 files in other folders)
